# pico-adc-read

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  EVH 5153S 50W Red + Merciless Drive.nam  FINAL_REPORT.md  PLAN.md  README.md  REPORT.md  USB_AUDIO_RESEARCH.md  example.nam  main.c  tusb_config.h  usb_descriptors.c
cmake/: nam_model.cmake
include/: nam_model.h
include/compat/: mutex
python/: adc_viewer.py  pyproject.toml
src/: main.cpp  nam_fx.cpp  nam_fx.h  noise_gate.cpp  noise_gate.h  reverb.cpp  reverb.h
tools/: CMakeLists.txt  nam2c.cpp
